# ops-swarm

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/: main.py
src/ops_swarm/: cli.py
tests/: test_smoke.py
